--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,10 @@ jobs:
         run: |
           aws s3api create-bucket --bucket ${{ env.S3_BUCKET_NAME }} --region ${{ env.AWS_REGION }} --create-bucket-configuration LocationConstraint=${{ env.AWS_REGION }}
           aws s3api put-public-access-block --bucket ${{ env.S3_BUCKET_NAME }} --public-access-block-configuration '{
-              "BlockPublicAcls": false,
-              "IgnorePublicAcls": false,
-              "BlockPublicPolicy": false,
-              "RestrictPublicBuckets": false
+              'BlockPublicAcls': false,
+              'IgnorePublicAcls': false,
+              'BlockPublicPolicy': false,
+              'RestrictPublicBuckets': false
 
       - name: Create DynamoDB
         run: |
