--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
       AWS_REGION: eu-west-1
       S3_BUCKET_NAME: aoa-demo-terraform-state-storage
       DYNAMODB_TABLE_NAME: aoa-demo-terraform-state-locking
+      KEY: terraform.tfstate
 
     steps:
       - name: Checkout Repository
@@ -37,6 +38,23 @@ jobs:
               "BlockPublicPolicy": false,
               "RestrictPublicBuckets": false              
             }'
+
+            # Add specific IAM permissions for S3 bucket
+            aws s3api put-bucket-policy --bucket ${{ env.S3_BUCKET_NAME }} --policy '{
+                "Version": "2012-10-17",
+                "Statement": [
+                    {
+                        "Effect": "Allow",
+                        "Action": "s3:ListBucket",
+                        "Resource": "arn:aws:s3:::${{ env.S3_BUCKET_NAME }}"
+                    },
+                    {
+                        "Effect": "Allow",
+                        "Action": ["s3:GetObject", "s3:PutObject", "s3:DeleteObject"],
+                        "Resource": "arn:aws:s3:::${{ env.S3_BUCKET_NAME }}/${{ env.KEY }}"
+                    }
+                ]
+            }'
       - name: Create DynamoDB
         run: |
           aws dynamodb create-table \
@@ -45,6 +63,23 @@ jobs:
               --key-schema AttributeName=ID,KeyType=HASH \
               --provisioned-throughput ReadCapacityUnits=5,WriteCapacityUnits=5 \
               --region ${{ env.AWS_REGION }}
+        
+          # Add specific IAM permissions for DynamoDB table
+          aws iam put-role-policy --role-name ${{ env.ROLE_NAME }} --policy-name DynamoDBPolicy --policy-document '{
+            "Version": "2012-10-17",
+            "Statement": [
+                {
+                    "Effect": "Allow",
+                    "Action": [
+                        "dynamodb:DescribeTable",
+                        "dynamodb:GetItem",
+                        "dynamodb:PutItem",
+                        "dynamodb:DeleteItem"
+                    ],
+                    "Resource": "arn:aws:dynamodb:${{ env.AWS_REGION }}:*:table/${{ env.DYNAMODB_TABLE_NAME }}"
+                }
+            ]
+          }' --region ${{ env.AWS_REGION }}
 
  
   terraform:
@@ -57,6 +92,9 @@ jobs:
 
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
+
+      - name: Wait for 20 seconds
+        run: sleep 20
 
       - name: Terraform Init
         env:
