--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
       S3_BUCKET_NAME: aoa-demo-terraform-state-storage
       DYNAMODB_TABLE_NAME: aoa-demo-terraform-state-locking
       KEY: terraform.tfstate
+      ROLE_NAME: webapp-infra-demo
 
     steps:
       - name: Checkout Repository
@@ -84,7 +85,20 @@ jobs:
       #       ]
       #     }' --region ${{ env.AWS_REGION }}
 
- 
+      - name: Create IAM Role and Attach Admin Policy
+        run: |
+           aws iam create-role --role-name ${{ env.ROLE_NAME }} --assume-role-policy-document '{
+               "Version": "2012-10-17",
+               "Statement": [
+                   {
+                       "Effect": "Allow",
+                       "Action": "*",
+                       "Resource": "*"
+                   }
+               ]
+           }' --region ${{ env.AWS_REGION }}
+           aws iam attach-role-policy --role-name ${{ env.ROLE_NAME }} --policy-arn arn:aws:iam::aws:policy/AdministratorAccess --region ${{ env.AWS_REGION }}
+    
   terraform:
     runs-on: ubuntu-20.04
     needs: dynam-db-installation
