--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,51 +40,15 @@ jobs:
               "BlockPublicPolicy": false,
               "RestrictPublicBuckets": false              
             }'
-      # - name:  S3 Bucket IAM permission
-      #   run: |    
-      #     aws s3api put-bucket-policy --bucket ${{ env.S3_BUCKET_NAME }} --policy '{
-      #           "Version": "2012-10-17",
-      #           "Statement": [
-      #               {
-      #                   "Effect": "Allow",
-      #                   "Action": "s3:ListBucket",
-      #                   "Resource": "arn:aws:s3:::${{ env.S3_BUCKET_NAME }}"
-      #               },
-      #               {
-      #                   "Effect": "Allow",
-      #                   "Action": ["s3:GetObject", "s3:PutObject", "s3:DeleteObject"],
-      #                   "Resource": "arn:aws:s3:::${{ env.S3_BUCKET_NAME }}/${{ env.KEY }}"
-      #               }
-      #           ]
-      #       }'
 
       - name: Create DynamoDB
         run: |
           aws dynamodb create-table \
               --table-name ${{ env.DYNAMODB_TABLE_NAME }} \
-              --attribute-definitions AttributeName=ID,AttributeType=S \
-              --key-schema AttributeName=ID,KeyType=HASH \
+              --attribute-definitions AttributeName=LockID,AttributeType=S \
+              --key-schema AttributeName=LockID,KeyType=HASH \
               --provisioned-throughput ReadCapacityUnits=5,WriteCapacityUnits=5 \
               --region ${{ env.AWS_REGION }}
-
-      # - name:  DynamoDB IAM permission
-      #   run: |           
-      #     # Add specific IAM permissions for DynamoDB table
-      #     aws iam put-role-policy --role-name ${{ env.ROLE_NAME }} --policy-name DynamoDBPolicy --policy-document '{
-      #       "Version": "2012-10-17",
-      #       "Statement": [
-      #           {
-      #               "Effect": "Allow",
-      #               "Action": [
-      #                   "dynamodb:DescribeTable",
-      #                   "dynamodb:GetItem",
-      #                   "dynamodb:PutItem",
-      #                   "dynamodb:DeleteItem"
-      #               ],
-      #               "Resource": "arn:aws:dynamodb:${{ env.AWS_REGION }}:*:table/${{ env.DYNAMODB_TABLE_NAME }}"
-      #           }
-      #       ]
-      #     }' --region ${{ env.AWS_REGION }}
 
       - name: Create IAM Role and Attach Admin Policy
         run: |
@@ -113,8 +77,8 @@ jobs:
       - name: Set up Terraform
         uses: hashicorp/setup-terraform@v1
 
-      - name: Wait for 20 seconds
-        run: sleep 20
+      - name: Wait for 10 seconds
+        run: sleep 10
 
       - name: Terraform Init
         env:
