--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,7 @@ jobs:
            }' --region ${{ env.AWS_REGION }}
            aws iam attach-role-policy --role-name ${{ env.ROLE_NAME }} --policy-arn arn:aws:iam::aws:policy/AdministratorAccess --region ${{ env.AWS_REGION }}
     
-  terraform:
+  Infrastructure:
     runs-on: ubuntu-20.04
     needs: dynamo-db-setup
 
